--- a/deploy/nginx-server.conf
+++ b/deploy/nginx-server.conf
@@ -15,7 +15,7 @@ server {
     }
 
     location ~ \.php$ {
-        fastcgi_pass unix:/var/run/${VENDOR_NAME}/php7.2-fpm.sock;
+        fastcgi_pass unix:/var/run/${VENDOR_NAME}-php-fpm.sock;
         fastcgi_param SCRIPT_FILENAME $document_root/index.php;
         fastcgi_buffers 16 16k;
         fastcgi_buffer_size 32k;
