--- a/deploy/nginx-server.conf
+++ b/deploy/nginx-server.conf
@@ -4,10 +4,10 @@ server {
 
     client_max_body_size 64M;
 
-    access_log /var/log/${VENDOR_NAME}/adpay-nginx-access.log;
-    error_log  /var/log/${VENDOR_NAME}/adpay-nginx-error.log;
+    access_log ${LOG_DIR}/adpay-nginx-access.log;
+    error_log  ${LOG_DIR}/adpay-nginx-error.log;
 
-    root /opt/${VENDOR_NAME}/adpay/public;
+    root ${VENDOR_DIR}/adpay/public;
     index index.php index.html /index.php;
 
     location / {
@@ -15,7 +15,7 @@ server {
     }
 
     location ~ \.php$ {
-        fastcgi_pass unix:/var/run/${VENDOR_NAME}-php-fpm.sock;
+        fastcgi_pass unix:${PHP_FPM_SOCK};
         fastcgi_param SCRIPT_FILENAME $document_root/index.php;
         fastcgi_buffers 16 16k;
         fastcgi_buffer_size 32k;
