--- a/deploy/nginx-server.conf
+++ b/deploy/nginx-server.conf
@@ -4,10 +4,10 @@ server {
 
     client_max_body_size 64M;
 
-    access_log ${LOG_DIR}/adpay-nginx-access.log;
-    error_log  ${LOG_DIR}/adpay-nginx-error.log;
+    access_log ${LOG_DIR}/${SERVICE_NAME}-nginx-access.log;
+    error_log  ${LOG_DIR}/${SERVICE_NAME}-nginx-error.log;
 
-    root ${VENDOR_DIR}/adpay/public;
+    root ${VENDOR_DIR}/${SERVICE_NAME}/public;
     index index.php index.html /index.php;
 
     location / {
