--- a/.env
+++ b/.env
@@ -21,6 +21,7 @@ APP_NAME=AdPay
 APP_PORT=8012
 APP_HOST=localhost
 HUMAN_SCORE_THRESHOLD=0.5
+CONVERSION_HUMAN_SCORE_THRESHOLD=0.4
 
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS='^localhost|example\.com$'
