--- a/composer.json
+++ b/composer.json
@@ -1,103 +1,113 @@
 {
-	"name": "adshares/adpay",
-	"description": "Implementation of AdPay service in Adshares Network",
-	"type": "project",
-	"license": "proprietary",
-	"authors": [
-		{
-			"name": "Adshares",
-			"homepage": "https://adshares.pl"
-		},
-		{
-			"name": "Contributors",
-			"homepage": "https://github.com/adshares/adpay/graphs/contributors"
-		}
-	],
-	"require": {
-		"php": "^7.2",
-		"ext-ctype": "*",
-		"ext-iconv": "*",
-		"ext-json": "*",
-		"doctrine/doctrine-bundle": "^1.11",
-		"doctrine/doctrine-migrations-bundle": "^2.0",
-		"ocramius/package-versions": "~1.4.0",
-		"symfony/console": "^4.3",
-		"symfony/dotenv": "^4.3",
-		"symfony/flex": "^1.4",
-		"symfony/framework-bundle": "^4.3",
-		"symfony/lock": "^4.3",
-		"symfony/monolog-bundle": "^3.4",
-		"symfony/yaml": "^4.3"
-	},
-	"require-dev": {
-		"dama/doctrine-test-bundle": "^6.1",
-		"dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
-		"jakub-onderka/php-parallel-lint": "^1.0",
-		"phpcompatibility/php-compatibility": "^9.3",
-		"phpunit/phpunit": "^8.4",
-		"sensiolabs-de/deptrac-shim": "^0.5",
-		"sensiolabs/security-checker": "^6.0",
-		"slevomat/coding-standard": "^5.0",
-		"squizlabs/php_codesniffer": "^3.5",
-		"symfony/debug-pack": "^1.0",
-		"symfony/maker-bundle": "^1.13",
-		"symfony/profiler-pack": "^1.0",
-		"symfony/test-pack": "^1.0",
-		"symfony/var-dumper": "^4.3",
-		"symfony/web-server-bundle": "^4.3"
-	},
-	"config": {
-		"preferred-install": {
-			"*": "dist"
-		},
-		"sort-packages": true
-	},
-	"autoload": {
-		"psr-4": {
-			"Adshares\\AdPay\\": "src/"
-		}
-	},
-	"autoload-dev": {
-		"psr-4": {
-			"Adshares\\AdPay\\Tests\\": "tests/"
-		}
-	},
-	"replace": {
-		"paragonie/random_compat": "2.*",
-		"symfony/polyfill-ctype": "*",
-		"symfony/polyfill-iconv": "*",
-		"symfony/polyfill-php71": "*",
-		"symfony/polyfill-php70": "*",
-		"symfony/polyfill-php56": "*"
-	},
-	"scripts": {
-		"auto-scripts": {
-			"cache:clear": "symfony-cmd"
-		},
-		"qa-check": [
-			"security-checker security:check",
-			"php bin/console lint:yaml config",
-			"parallel-lint --no-colors --blame --exclude vendor --exclude bin  .",
-			"phpcs -s config src tests",
-			"deptrac --no-ansi"
-		],
-		"test": "phpunit --testsuite Domain,Lib,Application,Infrastructure",
-		"test-coverage": "@test --coverage-text",
-		"test-ci": "phpunit --configuration phpunit-ci.xml",
-		"post-install-cmd": [
-			"@auto-scripts"
-		],
-		"post-update-cmd": [
-			"@auto-scripts"
-		]
-	},
-	"conflict": {
-		"symfony/symfony": "*"
-	},
-	"extra": {
-		"symfony": {
-			"allow-contrib": false,
-			"require": "4.3.*"
-		}
-	}
+    "name": "adshares/adpay",
+    "description": "Implementation of AdPay service in Adshares Network",
+    "type": "project",
+    "license": "GPL-3.0-or-later",
+    "keywords": [
+        "adshares",
+        "ads",
+        "adpay"
+    ],
+    "homepage": "https://github.com/adshares/adpay",
+    "support": {
+        "issues": "https://github.com/adshares/adpay/issues",
+        "source": "https://github.com/adshares/adpay"
+    },
+    "authors": [
+        {
+            "name": "Adshares",
+            "homepage": "https://adshares.pl"
+        },
+        {
+            "name": "Contributors",
+            "homepage": "https://github.com/adshares/adpay/graphs/contributors"
+        }
+    ],
+    "require": {
+        "php": "^7.2",
+        "ext-ctype": "*",
+        "ext-iconv": "*",
+        "ext-json": "*",
+        "doctrine/doctrine-bundle": "^1.11",
+        "doctrine/doctrine-migrations-bundle": "^2.0",
+        "ocramius/package-versions": "~1.4.0",
+        "symfony/console": "^4.3",
+        "symfony/dotenv": "^4.3",
+        "symfony/flex": "^1.4",
+        "symfony/framework-bundle": "^4.3",
+        "symfony/lock": "^4.3",
+        "symfony/monolog-bundle": "^3.4",
+        "symfony/yaml": "^4.3"
+    },
+    "require-dev": {
+        "dama/doctrine-test-bundle": "^6.1",
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
+        "jakub-onderka/php-parallel-lint": "^1.0",
+        "phpcompatibility/php-compatibility": "^9.3",
+        "phpunit/phpunit": "^8.4",
+        "sensiolabs-de/deptrac-shim": "^0.5",
+        "sensiolabs/security-checker": "^6.0",
+        "slevomat/coding-standard": "^5.0",
+        "squizlabs/php_codesniffer": "^3.5",
+        "symfony/debug-pack": "^1.0",
+        "symfony/maker-bundle": "^1.13",
+        "symfony/profiler-pack": "^1.0",
+        "symfony/test-pack": "^1.0",
+        "symfony/var-dumper": "^4.3",
+        "symfony/web-server-bundle": "^4.3"
+    },
+    "config": {
+        "preferred-install": {
+            "*": "dist"
+        },
+        "sort-packages": true
+    },
+    "autoload": {
+        "psr-4": {
+            "Adshares\\AdPay\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Adshares\\AdPay\\Tests\\": "tests/"
+        }
+    },
+    "replace": {
+        "paragonie/random_compat": "2.*",
+        "symfony/polyfill-ctype": "*",
+        "symfony/polyfill-iconv": "*",
+        "symfony/polyfill-php71": "*",
+        "symfony/polyfill-php70": "*",
+        "symfony/polyfill-php56": "*"
+    },
+    "scripts": {
+        "auto-scripts": {
+            "cache:clear": "symfony-cmd"
+        },
+        "qa-check": [
+            "security-checker security:check",
+            "php bin/console lint:yaml config",
+            "parallel-lint --no-colors --blame --exclude vendor --exclude bin  .",
+            "phpcs -s config src tests",
+            "deptrac --no-ansi"
+        ],
+        "test": "phpunit --testsuite Domain,Lib,Application,Infrastructure",
+        "test-coverage": "@test --coverage-text",
+        "test-ci": "phpunit --configuration phpunit-ci.xml",
+        "post-install-cmd": [
+            "@auto-scripts"
+        ],
+        "post-update-cmd": [
+            "@auto-scripts"
+        ]
+    },
+    "conflict": {
+        "symfony/symfony": "*"
+    },
+    "extra": {
+        "symfony": {
+            "allow-contrib": false,
+            "require": "4.3.*"
+        }
+    }
 }
