--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,12 @@
+api_post_bid_strategies:
+    path: /api/v{version}/bid-strategies
+    controller: Adshares\AdPay\UI\Controller\BidStrategyController::updateBidStrategies
+    methods: POST
+    requirements:
+        version: '1'
+    defaults:
+        _format: json
+
 api_post_campaigns:
     path: /api/v{version}/campaigns
     controller: Adshares\AdPay\UI\Controller\CampaignController::updateCampaigns
