--- a/composer.json
+++ b/composer.json
@@ -98,7 +98,7 @@
         "test": "phpunit --testsuite Domain,Lib,Application,Infrastructure",
         "test-coverage": "@test --coverage-text",
         "test-ci": "phpunit --configuration phpunit-ci.xml",
-        "dev": "/bin/bash -c '(source .env && if [ -f \".env.local\" ]; then source .env.local; fi && php -t ./public -S ${APP_HOST}:${APP_PORT})'"
+        "dev": "/bin/bash -c '(source .env && if [ -f \".env.local\" ]; then source .env.local; fi && php -S ${APP_HOST}:${APP_PORT} -t public dev-router.php)'"
     },
     "conflict": {
         "symfony/symfony": "*"
