Add automatic max_cpm calculation

--- a/.env
+++ b/.env
@@ -19,6 +19,8 @@ APP_PORT=8012
 APP_HOST=localhost
 HUMAN_SCORE_THRESHOLD=0.5
 CONVERSION_HUMAN_SCORE_THRESHOLD=0.4
+BUDGET_FACTOR=0.2
+SERVER_CPM=700000000000
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
