--- a/config/services.yaml
+++ b/config/services.yaml
@@ -107,7 +107,7 @@ services:
         arguments:
             $campaignRepository: '@Adshares\AdPay\Infrastructure\Repository\DoctrineCampaignRepository'
             $bidStrategyRepository: '@Adshares\AdPay\Infrastructure\Repository\DoctrineBidStrategyRepository'
-            $historicalCpmRepository: '@Adshares\AdPay\Infrastructure\Repository\DoctrineHistoricalCpmRepository'
+            $campaignCostRepository: '@Adshares\AdPay\Infrastructure\Repository\DoctrineCampaignCostRepository'
             $config: '@Adshares\AdPay\Domain\ValueObject\PaymentCalculatorConfig'
 
     Adshares\AdPay\UI\Controller\:
