--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,5 @@
+sonar.host.url=https://sonarcloud.io
+sonar.organization=adshares-github
 sonar.projectKey=adshares-adpay
 sonar.projectName=Adshares AdPay
 sonar.projectVersion=1.0RC
@@ -7,7 +9,7 @@ sonar.projectVersion=1.0RC
 # =====================================================
 
 sonar.links.homepage=https://adshares.net/
-sonar.links.ci=https://travis-ci.org/adshares/adpay
+sonar.links.ci=https://app.travis-ci.com/github/adshares/adpay
 sonar.links.scm=https://github.com/adshares/adpay
 sonar.links.issue=https://github.com/adshares/adpay/issues
 
