--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ AUTO_CPM_DEFAULT=700000000000
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=f382155286449b67da82346005b353b3
+APP_SECRET=00a2ba897e59fac27a0681e645119071
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -33,7 +33,7 @@ APP_SECRET=f382155286449b67da82346005b353b3
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 LOG_FILE_PATH=%kernel.logs_dir%/%kernel.environment%.log
