--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "ext-json": "*",
         "doctrine/doctrine-bundle": "^2.4",
         "doctrine/doctrine-migrations-bundle": "^3.1",
+        "doctrine/orm": "^2.11",
         "psr/log": "^1.1",
         "symfony/console": "^5.3",
         "symfony/dotenv": "^5.3",
@@ -37,7 +38,7 @@
         "symfony/framework-bundle": "^5.3",
         "symfony/lock": "^5.3",
         "symfony/monolog-bundle": "^3.7",
-        "symfony/orm-pack": "^2.1",
+        "symfony/proxy-manager-bridge": "5.3.*",
         "symfony/runtime": "^5.3",
         "symfony/yaml": "^5.3"
     },
@@ -50,9 +51,12 @@
         "qossmic/deptrac-shim": "^0.14",
         "slevomat/coding-standard": "^7.0",
         "squizlabs/php_codesniffer": "^3.6",
-        "symfony/debug-pack": "^1.0",
+        "symfony/browser-kit": "^5.3",
+        "symfony/css-selector": "^5.3",
+        "symfony/debug-bundle": "^5.3",
         "symfony/maker-bundle": "^1.32",
-        "symfony/test-pack": "^1.0"
+        "symfony/phpunit-bridge": "^6.0",
+        "symfony/stopwatch": "^5.3"
     },
     "config": {
         "preferred-install": {
