--- a/config/services.yaml
+++ b/config/services.yaml
@@ -77,9 +77,8 @@ services:
         arguments:
             $paymentReportRepository: '@Adshares\AdPay\Infrastructure\Repository\DoctrinePaymentReportRepository'
             $paymentRepository: '@Adshares\AdPay\Infrastructure\Repository\DoctrinePaymentRepository'
-            $campaignRepository: '@Adshares\AdPay\Infrastructure\Repository\DoctrineCampaignRepository'
-            $bidStrategyRepository: '@Adshares\AdPay\Infrastructure\Repository\DoctrineBidStrategyRepository'
             $eventRepository: '@Adshares\AdPay\Infrastructure\Repository\DoctrineEventRepository'
+            $paymentCalculatorFactory: '@Adshares\AdPay\Domain\Service\PaymentCalculatorFactory'
             $logger: '@logger'
 
     Adshares\AdPay\Application\Command\ReportDeleteCommand:
@@ -94,6 +93,22 @@ services:
             $paymentReportRepository: '@Adshares\AdPay\Infrastructure\Repository\DoctrinePaymentReportRepository'
             $paymentRepository: '@Adshares\AdPay\Infrastructure\Repository\DoctrinePaymentRepository'
             $logger: '@logger'
+
+    Adshares\AdPay\Domain\ValueObject\PaymentCalculatorConfig:
+        arguments:
+            $config: {
+                humanScoreThreshold: '%env(float:HUMAN_SCORE_THRESHOLD)%',
+                conversionHumanScoreThreshold: '%env(float:CONVERSION_HUMAN_SCORE_THRESHOLD)%',
+                autoCpmBudgetThreshold: '%env(float:AUTO_CPM_BUDGET_THRESHOLD)%',
+                autoCpmDefault: '%env(int:AUTO_CPM_DEFAULT)%'
+            }
+
+    Adshares\AdPay\Domain\Service\PaymentCalculatorFactory:
+        arguments:
+            $campaignRepository: '@Adshares\AdPay\Infrastructure\Repository\DoctrineCampaignRepository'
+            $bidStrategyRepository: '@Adshares\AdPay\Infrastructure\Repository\DoctrineBidStrategyRepository'
+            $campaignCostRepository: '@Adshares\AdPay\Infrastructure\Repository\DoctrineCampaignCostRepository'
+            $config: '@Adshares\AdPay\Domain\ValueObject\PaymentCalculatorConfig'
 
     Adshares\AdPay\UI\Controller\:
         resource: '../src/UI/Controller'
