--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.host.url=https://sonarcloud.io
 sonar.organization=adshares-github
 sonar.projectKey=adshares-adpay
 sonar.projectName=Adshares AdPay
-sonar.projectVersion=1.0RC
+sonar.projectVersion=1.3
 
 # =====================================================
 #   Meta-data for the project
