--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -7,7 +7,7 @@ when@dev:
         handlers:
             main:
                 type: stream
-                path: "%kernel.logs_dir%/%kernel.environment%.log"
+                path: '%env(resolve:LOG_FILE_PATH)%'
                 level: debug
                 channels: ["!event"]
             # uncomment to get logging in your browser
@@ -34,7 +34,7 @@ when@test:
                 channels: ["!event"]
             nested:
                 type: stream
-                path: "%kernel.logs_dir%/%kernel.environment%.log"
+                path: '%env(resolve:LOG_FILE_PATH)%'
                 level: debug
 
 when@prod:
@@ -48,7 +48,7 @@ when@prod:
                 buffer_size: 50 # How many messages should be saved? Prevent memory leaks
             nested:
                 type: stream
-                path: php://stderr
+                path: '%env(resolve:LOG_FILE_PATH)%'
                 level: debug
                 formatter: monolog.formatter.json
             console:
@@ -58,4 +58,4 @@ when@prod:
             deprecation:
                 type: stream
                 channels: [deprecation]
-                path: php://stderr
+                path: '%env(resolve:LOG_FILE_PATH)%'
