Add metaverseHumanScoreThreshold to .env

--- a/.env
+++ b/.env
@@ -20,6 +20,7 @@ APP_PORT=8012
 APP_HOST=localhost
 HUMAN_SCORE_THRESHOLD=0.5
 CONVERSION_HUMAN_SCORE_THRESHOLD=0.4
+METAVERSE_HUMAN_SCORE_THRESHOLD=0.4
 AUTO_CPM_BUDGET_THRESHOLD=0.2
 AUTO_CPM_DEFAULT=700000000000
 
